--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -1,5 +1,13 @@
 server:
   port: 0
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
 spring:
   application:
