--- a/payment-service-dev.yml
+++ b/payment-service-dev.yml
@@ -18,8 +18,12 @@ stripe:
   secret-key: sk_test_4eC39HqLyjWDarjtT1zdp7dc
   application-fee: 60
 
-axon:
-  serializer:
-    general: jackson
-    events: jackson
-    messages: jackson
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
