--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -61,8 +61,7 @@ resilience4j:
 
 payment:
   validation:
-    base-url: http://localhost:9092
-  # base-url: http://localhost:9000/payment-service
+    base-url: http://localhost:9000/payment-service
 
 gemini:
   base-url: https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
@@ -71,5 +70,14 @@ gemini:
 
 animal:
   profile:
-    base-url: http://localhost:9091/graphql
+    base-url: http://localhost:9000/animal-service/graphql
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
