--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -9,7 +9,7 @@ spring:
         - id: animal-service
           uri: lb://animal-service
           predicates:
-            - Path=/animal-service/graphql/**
+            - Path=/animal-service/**
 
         - id: application-service
           uri: lb://application-service
