--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -6,9 +6,9 @@ spring:
     gateway:
       routes:
         - id: animal-service
-          uri: lb://animal-service
+          uri: lb://animal-service/graphql
           predicates:
-            - Path=/animal-service/**
+            - Path=/animal-service/graphql/**
 
         - id: application-service
           uri: lb://application-service
