--- a/animal-service-dev.yml
+++ b/animal-service-dev.yml
@@ -27,6 +27,7 @@ axon:
 eureka:
   instance:
     hostname: localhost
+    preferIpAddress: true
   client:
     fetch-registry: true
     register-with-eureka: true
