--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -8,7 +8,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOrigins: '*'
+            allowedOrigins: 'http://localhost:3000'
             allowedMethods: '*'
             allowedHeaders: '*'
         locator:
