--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -4,6 +4,12 @@ spring:
 
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: 'http://localhost:3000'
+            allowedMethods: '*'
+            allowedHeaders: '*'
       discovery:
         locator:
           enabled: 'true'
