--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -25,7 +25,9 @@ spring:
           predicates:
             - Path=/application-service/**
           filters:
-            - RoleBasedAuth=CUSTOMER, EMPLOYEE, ADMIN
+            - name: RoleBasedAuth
+              args:
+                roles: CUSTOMER, EMPLOYEE, ADMIN
 
         - id: payment-service
           uri: lb://payment-service
@@ -37,7 +39,9 @@ spring:
           predicates:
             - Path=/user-service/**
           filters:
-            - RoleBasedAuth=CUSTOMER, EMPLOYEE, ADMIN
+            - name: RoleBasedAuth
+              args:
+                roles: CUSTOMER, EMPLOYEE, ADMIN
 
 server:
   port: 9000
