--- a/application-service-dev.yml
+++ b/application-service-dev.yml
@@ -13,8 +13,8 @@ spring:
     name: application-service
   data:
     mongodb:
-      uri: mongodb+srv://root:root@cluster0.gf4mguw.mongodb.net/?retryWrites=true&w=majority
-      database: cluster0
+      uri: ${MONGO_URI}
+      database: ${MONGO_DB}
       port: 271017
 
 eureka:
