--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -25,9 +25,9 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    password: root
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: ${MYSQL_USERNAME}
     url: jdbc:mysql://localhost:3306/auth
   security:
     token:
