--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -28,7 +28,7 @@ spring:
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${MYSQL_USERNAME}
-    url: jdbc:mysql://localhost:3306/auth
+    url: ${MYSQL_URL}
   security:
     token:
       life-time: 86400000
