--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -8,7 +8,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: ${EUREKA_SERVER_URL}
+      defaultZone: ${DISCOVERY_SERVER_URL}
 
 spring:
   application:
