--- a/discovery-service-dev.yml
+++ b/discovery-service-dev.yml
@@ -7,7 +7,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${DISCOVERY_HOSTNAME}
 
   client:
     register-with-eureka: false
