--- a/discovery-service-dev.yml
+++ b/discovery-service-dev.yml
@@ -9,7 +9,7 @@ eureka:
   instance:
     name: ${DISCOVERY_HOSTNAME}
   client:
-    register-with-eureka: true
-    fetch-registry: true
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
       defaultZone: ${DISCOVERY_SERVER_URL}
