--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -6,12 +6,10 @@ axon:
     servers: ${AXON_SERVER}
   
 eureka:
-  # instance:
-  #   hostname: ${DISCOVERY_HOSTNAME}
   client:
     fetch-registry: true
     register-with-eureka: true
-    service-url:
+    serviceUrl:
       defaultZone: ${DISCOVERY_SERVER_URL}
 
 spring:
