--- a/discovery-service-dev.yml
+++ b/discovery-service-dev.yml
@@ -7,7 +7,7 @@ server:
 
 eureka:
   instance:
-    name: ${DISCOVERY_HOSTNAME}
+    name: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
