--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -38,7 +38,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${DISCOVERY_SERVER_URL}
 
 springdoc:
   api-docs:
