--- a/animal-service-dev.yml
+++ b/animal-service-dev.yml
@@ -19,18 +19,17 @@ spring:
       enabled: true
 
 axon:
+  axonserver:
+    servers: ${AXON_SERVER}
   serializer:
     general: jackson
     events: jackson
     messages: jackson
 
 eureka:
-  instance:
-    hostname: localhost
-    preferIpAddress: true
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${DISCOVERY_SERVER_URL}
 
