--- a/application-service-dev.yml
+++ b/application-service-dev.yml
@@ -6,7 +6,7 @@ application:
     max: 5
 
 web-client:
-  base-url: http://localhost:9000/payment-service
+  base-url: ${GATEWAY_SERVICE_URL}/payment-service
 
 spring:
   application:
@@ -18,15 +18,15 @@ spring:
       port: 271017
 
 eureka:
-  instance:
-    hostname: localhost
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${DISCOVERY_SERVER_URL}
 
 axon:
+  axonserver:
+    servers: ${AXON_SERVER}
   serializer:
     general: jackson
     events: jackson
